// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameControls component Dispatches SET_STARTED action on button click 1`] = `
<div>
  <div
    class="game-controls-container"
  >
    <button
      class="button"
    >
      Play
    </button>
  </div>
</div>
`;

exports[`GameControls component Renders correctly - according to the started value 1`] = `
<div>
  <div
    class="game-controls-container"
  >
    <button
      class="button"
    >
      Stop
    </button>
  </div>
</div>
`;

exports[`GameControls component Renders correctly - according to the started value 2`] = `
<div>
  <div
    class="game-controls-container"
  >
    <button
      class="button"
    >
      Play
    </button>
  </div>
</div>
`;
